# fastapi-sandbox

./: README.org  pyproject.toml
src/app/: main.py
