[tool.poetry]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Playground for fastapi"
authors = ["Deepu Mohan Puthrote <git@deepumohan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
